 * fix: bracket matching works more reliable (also when you double/triple         click on a line and then the cursor is placed on a ({[ or ]}))  * fix: 5+clicks (and more) causes current line indicator to appear on         multiple lines

BUG: 106402

svn path=/branches/KDE/3.5/kdelibs/; revision=556448